--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "web-ext": "^7.4.0"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@chialab/esbuild-plugin-html@0.18.2": "patches/@chialab__esbuild-plugin-html@0.18.2.patch"
+    }
   }
 }
